# Placer

./: CMakeLists.txt  README.md  main.cpp
database/: database.h
exporter/: exporter.cpp  exporter.h
parser/: parser.cpp  parser.h
placement/: placement.cpp  placement.h
text_case/: case1.md
